--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  
-  
-    <div id="body"></div>
+    <div id="react-view"></div>
   </body>
 
-  <script>
-    // You can also require other files to run in this process
-    //require('./renderer.js')
-  </script>
+  <script src="./public/assets/app-bundle.js"></script>
+  <!--<script type="text/jsx">-->
+    <!--// You can also require other files to run in this process-->
+    <!--require('./scripts/application');-->
+  <!--</script>-->
 </html>
