Added simple downloader from github. Added device list function.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Harvester</title>
   </head>
   <body>
     <div id="react-view"></div>
   </body>
 
-  <script src="./public/assets/app-bundle.js"></script>
-  <!--<script type="text/jsx">-->
-    <!--// You can also require other files to run in this process-->
-    <!--require('./scripts/application');-->
-  <!--</script>-->
+  <script src="./public/assets/bundle.js"></script>
 </html>
