Added simple bootstrap3 design. Now launchable via electron.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Harvester</title>
+    <link rel="stylesheet" href="./styles/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles/css/custom.css">
   </head>
   <body>
     <div id="react-view"></div>
